# FYP18-03-Software

./: .gitignore  .mbed  .mbedignore  CMakeLists.txt  EmbeddedProto.lib  README.md  WIZnetInterface.lib  custom_targets.lib  lv_conf.h  lvgl.lib  lvglDriver.lib  main.cpp  mbed-os.lib  mbed_config.h
.github/workflows/: main.yml
apps/: CMakeLists.txt  main.cpp
drivers/: CMakeLists.txt
drivers/DS1820/: CMakeLists.txt  DS1820.cpp
drivers/HX711/: CMakeLists.txt
drivers/LA_T8/: CMakeLists.txt  LA_T8.cpp  LA_T8.h
drivers/SERVO/: CMakeLists.txt  ServoController.h
drivers/libs/: LinkedList.cpp  globals.cpp
eth_src/: README.md  eth_messages.h
include/: LinkedList.h  globals.h
logger/: log.cpp  log.h
proto/: eth_messages.proto
proto_src/: proto_msg.h
src/: AppController.cpp  AppController.h  Connection.cpp  Connection.h  Ethernet.cpp  Ethernet.h  EthernetController.cpp  EthernetController.h  LA_T8.cpp  LA_T8.h  Servo.cpp  Servo.h  ServoController.cpp  globals.cpp  globals.h
ui/: CMakeLists.txt  ui.c  ui.cpp  ui.h  ui_handler.c  ui_handler.h  ui_helpers.c  ui_helpers.cpp  ui_helpers.h
